css/styles.css
@charset "utf-8";
/* CSS Document */
content{
	display: flex;
	flex-wrap: wrap;
	order:initial;
}


@media screen and (max-width: 550px ) {
	.header nav, h1 {
		font-size: 1rem;
		width: 100%;
		order: 0;
		padding: 0;
		margin: 0;
	}
	.inside header {
	  position: relative;
	  top: 0;
	  width: 100%;
	  z-index: 1000;
	}
	.inside #map {
	  background-color: #ccc;
	  width: 100%;
		height: 20vh;
	}
	#breadcrumb {
	    padding: 15px;
	    list-style: none;
	    background-color: #eee;
	    font-size: .8rem;
	    margin: 0;
	    width: calc(100% - 30px);
			order: 1;
	}
	.inside #restaurant-container{
		order: 3;
		width: 100%;
		padding: 0;
		display: inline;
	}
	.inside #map-container{
		order:2;
		width: 100%;
		display: flex;
    flex-flow: wrap;
    	flex-direction: initial;
    	flex-wrap: wrap;
    	display: inline-flex;
	}
	.inside #reviews-container{
		order:2;
		width: 100%;
		height: 25vh;
		display: inline;
	}
	.filter-options {
	  width: 100%;
		font-size: .8rem;
	}
	#restaurant-name {
	  color: #8A4500;
	  font-family: Arial,sans-serif;
	  font-size: 1.2rem;
		width: calc(100% - 30px);
	  font-weight: 200;
	  letter-spacing: 0;
	  margin: 15px;
	  text-transform: uppercase;
	  line-height: 1.1;
	}
	#restaurant-img {
		width: 100%;
		height: 30vh;
    object-fit: cover;
	}
	#restaurant-address {
	  font-size: 12pt;
	  margin: 10px 0px;
	}
	#restaurant-cuisine {
	  background-color: #333;
	  color: #ddd;
	  font-size: 12pt;
	  font-weight: 300;
	  letter-spacing: 10px;
	  margin: 0 0 20px;
	  padding: 2px 0;
	  text-align: center;
	  text-transform: uppercase;
		width: 100%;
	}
	.inside #footer {
	  bottom: 0;
	  width: calc(100% - 50px);
	}
	#reviews-list li {
	  width: calc(100% - 40px);
	}
	#restaurants-list li {
	  width: calc(100% - 30px);
	}
	#map {
	  height: 40vh;
	  width: 100%;
	}
}

@media screen and (min-width: 551px) {
	.header nav, h1 {
		font-size: 1.2rem;
		width: 100%;
		order: 0;
		padding: 0;
		margin: 0;
	}
	.inside header {
	  position: relative;
	  top: 0;
	  width: 100%;
	  z-index: 1000;
	}
	.inside #map {
	  background-color: #ccc;
	  width: 100%;
		height: 30vh;
	}
	#breadcrumb {
	    padding: 15px;
	    list-style: none;
	    background-color: #eee;
	    font-size: 1rem;
	    margin: 0;
	    width: calc(100% - 30px);
			order: 1;
	}
	.inside #restaurant-container{
		order: 3;
		width: 100%;
		padding: 0;
		display: inline;
	}
	.inside #map-container{
		order:2;
		width: 100%;
		display: flex;
    flex-flow: wrap;
    	flex-direction: initial;
    	flex-wrap: wrap;
    	display: inline-flex;
	}
	.inside #reviews-container{
		order:4;
		width: 100%;
		height: 25vh;
		display: inline;
	}
	.filter-options {
	  width: 100%;
		font-size: .8rem;
	}
	#restaurant-name {
	  color: #8A4500;
	  font-family: Arial,sans-serif;
	  font-size: 1.2rem;
		width: calc(100% - 30px);
	  font-weight: 200;
	  letter-spacing: 0;
	  margin: 15px;
	  text-transform: uppercase;
	  line-height: 1.1;
	}
	#restaurant-img {
		width: calc(100% - 300px);
		height: 40vh;
    object-fit: cover;
	}
	#restaurant-address {
	  font-size: 12pt;
	  margin: 10px 0px;
	}
	#restaurant-cuisine {
	  background-color: #333;
	  color: #ddd;
	  font-size: 12pt;
	  font-weight: 300;
	  letter-spacing: 10px;
	  margin: 0 0 20px;
	  padding: 2px 0;
	  text-align: center;
	  text-transform: uppercase;
		width: 100%;
	}
	.inside #footer {
	  bottom: 0;
	  width: calc(100% - 50px);
	}
	#reviews-list li {
	  width: calc(50% - 44px);
		display: inline-grid;
	}
	#restaurants-list li {
	  width: calc(50% - 96px);
	}
	#map {
	  height: 40vh;
	  width: 100%;
	}
	#restaurant-hours{
		display: inline-block;
	}
}

@media screen and (min-width: 900px) {
	.header nav, h1 {
		font-size: 1.2rem;
		width: 100%;
		order: 0;
		padding: 0;
		margin: 0;
	}
	.inside header {
	  position: relative;
	  top: 0;
	  width: 100%;
	  z-index: 1000;
	}
	.inside #map {
	  background-color: #ccc;
	  width: 100%;
		height: 30vh;
	}
	#breadcrumb {
	    padding: 15px;
	    list-style: none;
	    background-color: #eee;
	    font-size: 1rem;
	    margin: 0;
	    width: calc(100% - 30px);
			order: 1;
	}
	.inside #restaurant-container{
		order: 3;
		width: 100%;
		padding: 0;
		display: inline;
	}
	.inside #map-container{
		order:2;
		width: 100%;
		display: flex;
    flex-flow: wrap;
    	flex-direction: initial;
    	flex-wrap: wrap;
    	display: inline-flex;
	}
	.inside #reviews-container{
		order:4;
		width: 100%;
		height: 25vh;
		display: inline;
	}
	.filter-options {
	  width: 100%;
		font-size: .8rem;
	}
	#restaurant-name {
	  color: #8A4500;
	  font-family: Arial,sans-serif;
	  font-size: 1.2rem;
		width: calc(100% - 30px);
	  font-weight: 200;
	  letter-spacing: 0;
	  margin: 15px;
	  text-transform: uppercase;
	  line-height: 1.1;
	}
	#restaurant-img {
		width: calc(100% - 300px);
		height: 40vh;
    object-fit: cover;
	}
	#restaurant-address {
	  font-size: 12pt;
	  margin: 10px 0px;
	}
	#restaurant-cuisine {
	  background-color: #333;
	  color: #ddd;
	  font-size: 12pt;
	  font-weight: 300;
	  letter-spacing: 10px;
	  margin: 0 0 20px;
	  padding: 2px 0;
	  text-align: center;
	  text-transform: uppercase;
		width: 100%;
	}
	.inside #footer {
	  bottom: 0;
	  width: calc(100% - 50px);
	}
	#reviews-list li {
	  width: calc(33% - 41px);
		display: inline-grid;
	}
	#restaurants-list li {
	  width: calc(33% - 91px);
	}
	#map {
	  height: 40vh;
	  width: 100%;
	}
	#restaurant-hours{
		display: inline-block;
	}

}

body,td,th,p{
	font-family: Arial, Helvetica, sans-serif;
	font-size: 10pt;
	color: #333;
	line-height: 1.5;
}
body {
	background-color: #fdfdfd;
	margin: 0;
	position:relative;
}
ul, li {
	font-family: Arial, Helvetica, sans-serif;
	font-size: 10pt;
	color: #333;
}
a {
	color: #8A4500;
	text-decoration: none;
}
a:hover, a:focus {
	color: #96C7F3;
	text-decoration: none;
}
a img{
	border: none 0px #fff;
}
h1, h2, h3, h4, h5, h6 {
  font-family: Arial, Helvetica, sans-serif;
  /*margin: 0 0 20px;*/
}
/*article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
	display: block;
}*/
#maincontent {
  background-color: #f3f3f3;
}
#footer {
  background-color: #444;
  color: #DBDBDB;
  font-size: 8pt;
  letter-spacing: 1px;
  padding: 25px;
  text-align: center;
  text-transform: uppercase;
}
#footer strong {
	color:#FFD5A8
}
/* ====================== Navigation ====================== */
nav {
  width: 100%;
  background-color: #444;
  text-align:center;
}
nav h1 a {
  color: #fff;
  font-weight: 200;
  letter-spacing: 10px;
  text-transform: uppercase;
}

/* Display list items side by side */
#breadcrumb li {
    display: inline;
}

/* Add a slash symbol (/) before/behind each list item */
#breadcrumb li+li:before {
    padding: 8px;
    color: black;
    content: "/\00a0";
}

/* Add a color to all links inside the list */
#breadcrumb li a {
    color: #0275d8;
    text-decoration: none;
}

/* Add a color on mouse-over */
#breadcrumb li a:hover {
    color: #01447e;
    text-decoration: underline;
}
/* ====================== Map ====================== */
#map {
  background-color: #ccc;
}
/* ====================== Restaurant Filtering ====================== */
.filter-options {
  height: auto;
  background-color: #96C7F3;
  align-items: center;
}
.filter-options h2 {
  color: #333333;
  font-size: 1rem;
  font-weight: normal;
  line-height: 1;
  margin: 0 10px;
}
.filter-options select {
  background-color: white;
  border: 1px solid #fff;
  font-family: Arial,sans-serif;
  font-size: .8rem;
  height: 1.5rem;
  letter-spacing: 0;
  margin: 10px;
  padding: 0 10px;
  width: 150px;
}

/* ====================== Restaurant Listing ====================== */
#restaurants-list {
  background-color: #f3f3f3;
  list-style: outside none none;
  margin: 0;
  padding: 30px 15px 60px;
  text-align: center;
	flex-flow: wrap;
    flex-direction: initial;
    flex-wrap: wrap;
  display: inline-flex;
}
#restaurants-list li {
  background-color: #fff;
  border: 2px solid #ccc;
  font-family: Arial,sans-serif;
  margin: 15px;
  min-height: 380px;
  padding: 0 30px 25px;
  text-align: left;
}
#restaurants-list .restaurant-img {
  background-color: #ccc;
  display: block;
  margin: 0;
  width: 100%;
  min-height: 248px;
	object-fit: cover;
}
#restaurants-list li h1 {
  color: #8A4500;
  font-family: Arial,sans-serif;
  font-size: 14pt;
  font-weight: 200;
  letter-spacing: 0;
  line-height: 1.3;
  margin: 20px 0 10px;
  text-transform: uppercase;
	object-fit: cover;
}
#restaurants-list p {
  margin: 0;
  font-size: 11pt;
}
#restaurants-list li a {
  background-color: #8A4500;
  border-bottom: 3px solid #eee;
  color: #fff;
  display: inline-block;
  font-size: 10pt;
  margin: 15px 0 0;
  padding: 8px 30px 10px;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
}

/* ====================== Restaurant Details ====================== */

#restaurant-container, #reviews-container {
  border-bottom: 1px solid #d9d9d9;
  border-top: 1px solid #fff;
}
#reviews-container {
  padding: 30px 40px 80px;
}

#reviews-list {
  margin: 0;
  padding: 0;
}
#reviews-list li {
  background-color: #fff;
    border: 2px solid #f3f3f3;
  list-style-type: none;
  margin: 0 0 30px;
  overflow: hidden;
  padding: 0 20px 20px;
  position: relative;
}
#reviews-list li p {
  margin: 0 0 10px;
}
#restaurant-hours td {
  color: #666;
}

